fix: z-index of header in mobile version

--- a/css/outline.css
+++ b/css/outline.css
@@ -705,13 +705,11 @@ footer {
         z-index: -100;
         text-align: center;
         width: 100%;
-        /*margin-left: 5rem;*/
     }
 
     .dog {
         width: 23rem;
         height: 23rem;
-        /*display: none;*/
         margin-right: 0;
     }
 
@@ -729,15 +727,12 @@ footer {
     }
 
     .homepage h1, .homepage p {
-        z-index: -100;
-        /*text-align: center;*/
         width: 90vw;
     }
 
     .cat {
         width: 23rem;
         height: 23rem;
-        /*display: none*/
     }
 
     .step {
@@ -790,7 +785,7 @@ footer {
 
     .navbar .nav-container a {
         text-decoration: none;
-        color: #0e2431;
+        color: #202020;
         font-weight: 700;
         font-size: 1.2rem;
         padding: 0.7rem;
@@ -853,6 +848,11 @@ footer {
         transition: transform 0.4s ease-in-out;
     }
 
+    header {
+        position: fixed;
+        z-index: 999;
+    }
+
     .navbar .menu-items {
         padding-top: 120px;
         box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
@@ -865,7 +865,6 @@ footer {
         padding-left: 50px;
         transition: transform 0.5s ease-in-out;
         text-align: center;
-        z-index: 100;
     }
 
     .navbar .menu-items li {
@@ -893,15 +892,6 @@ footer {
     .nav-container input[type="checkbox"]:checked ~ .logo {
         display: none;
     }
-
-    .nav-container input[type="checkbox"]:checked ~ .info, .social_networks, .step, .pet, .buttons, .about_us {
-        z-index: 0;
-    }
-
-
-    /*.info, .social_networks, .step, .pet, .buttons, .about_us {*/
-    /*    z-index: -100;*/
-    /*}*/
 }
 
 
